# D_Z4.1

./: .coverage  .gitignore  pyproject.toml
tests/: 111  2..py  test_category.py  test_exercise.py  test_lawn_grass.py  test_product.py  test_smartphone.py
utils/: Category.py  abs_class.py  category.py  exercise_1.py  lawn_grass.py  load_json.py  mixin_log.py  product.json  product.py  smartphone.py
